--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,57 @@
+/* START GLOBAL RULES */
+*
+{
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
 body{
   direction: rtl;
   background-color: #e1f5fe;
   font-family: "Cairo", sans-serif;
   color: black;
 }
+html
+{
+  scroll-behavior: smooth;
+}
+ul
+{
+  list-style-type: none;
+  text-decoration: none;
+}
+.container
+{
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+@media (min-width: 768px) 
+{
+  .container
+  {
+    width: 750px;
+  }
+}
+@media (min-width: 992px) 
+{
+  .container
+  {
+    width: 970px;
+  }
+}
+@media (min-width: 1200px) 
+{
+  .container
+  {
+    width: 1170px;
+  }
+}
+/* END GLOBAL RULES */
+
 
 sub-text-color{
   color: white;
