--- a/src/componant/Header.css
+++ b/src/componant/Header.css
@@ -2,13 +2,30 @@ header{
   height: 56px;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
+  position: relative;
+}
+header::before{
+  content: '';
+  width: calc(100% - 30px);
+  height: 2px;
+  background-color: #abdff6;
+  position: absolute;
+  top: 100%;
+  left: 15px;
 }
 header h2{
   margin: 0;
   padding: 0;
   font-size: 30px;
   font-weight: 800;
+}
+header h2 a{
+  color: rgb(20, 19, 19);
+  text-decoration: none;
+}
+header h2 a:hover{
+  color: black;
 }
 header ul{
   margin: 0;
@@ -25,7 +42,7 @@ header ul li a{
   color: #777;
   text-decoration: none;
   font-size: 20px;
-  font-weight: 500;
+  font-weight: 600;
 }
 header ul a:hover{
   color: #303030;
