--- a/src/componant/Slider.css
+++ b/src/componant/Slider.css
@@ -1,4 +1,4 @@
-.image{
+.slider.image{
   margin-top: 20px;
   width: 100%;
   height: calc(100vb - 96px);
@@ -6,12 +6,12 @@
   position: relative;
   transition: 3s;
 }
-.image img{
+.slider.image img{
   width: 100%;
   height: 100%;
   transition: 3s;
 }
-.image span{
+.slider.image span{
   color: white;
   text-shadow: 0 0 5px black;
   font-size: 30px;
@@ -27,9 +27,9 @@
   border-radius: 10px;
   
 }
-.image span.left{
+.slider.image span.left{
   left: 0;
 }
-.image span.right{
+.slider.image span.right{
   right: 0;
 }
